--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="c-header">
         <div class="u-wrapper">
-            <a href="#">
+            <a href="/">
                 <img class="c-header__logo" src="./img/logo-white.svg" alt="">
             </a>
             <nav class="c-header__navbar" id="menu">
@@ -172,7 +172,7 @@
                 </div>
                 <div class="u-arranger u-arranger--center">
                     <a href="#verifica" class="c-cta">Quiero agendar</a>
-                    <a href="https://www.google.com/maps/dir//19.5605126,-96.9262455/@19.560513,-96.926245,16z?hl=es" class="c-cta c-cta--hollow">¿Cómo llegar?</a>
+                    <a href="https://www.google.com/maps/dir//19.5605126,-96.9262455/@19.560513,-96.926245,16z?hl=es" class="c-cta c-cta--hollow" target="_blank">¿Cómo llegar?</a>
                 </div>
             </div>
         </div>
