--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -11,17 +11,17 @@
 <body>
     <header class="c-header">
         <div class="u-wrapper">
-            <a href="#">
+            <a href="/">
                 <img class="c-header__logo" src="./img/logo-white.svg" alt="">
             </a>
             <nav class="c-header__navbar" id="menu">
                 <ul class="c-header__list">
-                    <li class="c-header__item"><a href="#que-es" class="c-header__link">¿Qué es?</a></li>
-                    <li class="c-header__item"><a href="#beneficios" class="c-header__link">Beneficios</a></li>
-                    <li class="c-header__item"><a href="#calendario" class="c-header__link">Calendario</a></li>
-                    <li class="c-header__item"><a href="#tortuga" class="c-header__link">Medio Ambiente</a></li>
-                    <li class="c-header__item"><a href="#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
-                    <li class="c-header__item"><a href="#verifica" class="c-cta c-cta--mini">Verifica</a></li>
+                    <li class="c-header__item"><a href="/index.html#que-es" class="c-header__link">¿Qué es?</a></li>
+                    <li class="c-header__item"><a href="/index.html#beneficios" class="c-header__link">Beneficios</a></li>
+                    <li class="c-header__item"><a href="/index.html#calendario" class="c-header__link">Calendario</a></li>
+                    <li class="c-header__item"><a href="/index.html#tortuga" class="c-header__link">Medio Ambiente</a></li>
+                    <li class="c-header__item"><a href="/index.html#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
+                    <li class="c-header__item"><a href="/index.html#verifica" class="c-cta c-cta--mini">Verifica</a></li>
                 </ul>
             </nav>
             <nav class="c-header__mobile-navbar">
@@ -72,10 +72,10 @@
         <div class="u-wrapper u-wrapper--blog">
             <h3 class="c-cta-banner__title">Verificación Cuevas</h3>
             <h4 class="c-cta-banner__subtitle">Centro de Verificación Vehicular Autorizado C-XL-02</h4>
-            <a href="#" class="c-cta-banner__link">Ma. Enriqueta Camarillo #6. Xalapa, Ver.</a>
+            <a href="https://www.google.com/maps/dir//19.5605126,-96.9262455/@19.560513,-96.926245,16z?hl=es" class="c-cta-banner__link" target="_blank">Ma. Enriqueta Camarillo #6. Xalapa, Ver.</a>
             <a href="tel:+522288156209" class="c-cta-banner__link">Tel: (228) 8-15-62-09</a>
             <p class="c-cta-banner__text">¡No esperes a ser multado! Agenda tu cita y no vuelvas a hacer filas</p>
-            <a href="#" class="c-cta-banner__button">Agendar</a>
+            <a href="/index.html#verifica" class="c-cta-banner__button">Agendar</a>
         </div>
     </section>
     <div class="u-wrapper">
