--- a/index.html
+++ b/index.html
@@ -256,15 +256,15 @@
     </section>
     <section id="verifica">
         <div class="u-wrapper">
-            <form class="c-form" action="">
+            <form class="c-form" action="https://formspree.io/xzbzropw" method="POST">
                 <h3 class="c-form__title" >Agenda tu cita</h3>
                 <p class="c-form__description" ><strong>¡No hagas filas!</strong> En menos de 1 minuto puedes agendar tu cita para verificar. Es fácil y rápido; solo necesitamos un par de datos tuyos y nosotros nos pondremos en contacto contigo para confirmar tu cita lo más pronto posible.</p>
                 <label class="c-form__label" for="">Nombre*:</label>
-                <input class="c-form__input" type="text" name="" id="" required>
+                <input class="c-form__input" type="text" name="nombre" id="" required>
                 <div class="c-form__input-divider">
                     <div class="c-form__input-division">
                         <label class="c-form__label" for="">Marca y Modelo del vehículo:</label>
-                        <input class="c-form__input" type="text" name="nombre" id="">
+                        <input class="c-form__input" type="text" name="modelo" id="">
 
                     </div>
                     <div class="c-form__input-division">
