Added Facebook Open Graph Meta Tags to Index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Facebook Meta -->
+    <meta property="og:url" content="https://verificacioncuevas.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="¡Cuida tu patrimonio verificando!">
+    <meta property="og:description" content="Encuéntranos en Ma. Enriqueta Camarillo #6. 9:00am - 2:00pm y de 4:00pm - 7:00pm. Tan solo 2 cuadras atrás de la Nissan.">
+    <meta property="og:image" content="https://verificacioncuevas.com/img/hero.png">
+    <!-- / Facebook Meta -->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
