--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Facebook Meta -->
+    <meta property="og:url" content="https://verificacioncuevas.com/5-tips-para-verificar.html">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="¡Que no te multen! 5 tips para pasar la verificación">
+    <meta property="og:description" content="Te damos 5 tips para que puedas pasar la verificación vehicular sin mayor problema.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/car-engine.jpg">
+    <!-- / Facebook Meta -->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
