Minor grammatical fix

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -7,7 +7,7 @@
     <!-- Facebook Meta -->
     <meta property="og:url" content="https://verificacioncuevas.com/5-tips-para-verificar.html">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="¡Que no te multen! Te decimos como pasar la verificación.">
+    <meta property="og:title" content="¡Que no te multen! Te decimos cómo pasar la verificación.">
     <meta property="og:description" content="Te damos 5 tips para que puedas pasar la verificación vehicular sin mayor problema.">
     <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/car-engine.jpg">
     <!-- / Facebook Meta -->
