Added first attempt of Schema.org to index

--- a/index.html
+++ b/index.html
@@ -316,5 +316,20 @@
             })
         })
     </script>
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "LocalBusiness",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Xalapa",
+            "addressRegion": "Veracruz",
+            "streetAddress": "Maria Enriqueta Camarillo #6"
+          },
+          "description": "Encuéntranos en Ma. Enriqueta Camarillo #6. 9:00am - 2:00pm y de 4:00pm - 7:00pm. Tan solo 2 cuadras atrás de la Nissan.",
+          "name": "Verificación Cuevas",
+          "telephone": "228-815-6209"
+        }
+    </script>
 </body>
 </html>
