Added more schema info

--- a/index.html
+++ b/index.html
@@ -328,7 +328,12 @@
           },
           "description": "Encuéntranos en Ma. Enriqueta Camarillo #6. 9:00am - 2:00pm y de 4:00pm - 7:00pm. Tan solo 2 cuadras atrás de la Nissan.",
           "name": "Verificación Cuevas",
-          "telephone": "228-815-6209"
+          "telephone": "228-815-6209",
+          "openingHours": [
+                "Mo-Sa 09:00-14:00",
+                "Mo-Fr 16:00-18:30"
+            ],
+            "priceRange": "$",
         }
     </script>
 </body>
