Added tel & url to schema

--- a/index.html
+++ b/index.html
@@ -334,6 +334,8 @@
                 "Mo-Fr 16:00-18:30"
             ],
             "priceRange": "$",
+            "telephone": "(228) 815-6209",
+            "url": "https://verificacioncuevas.com"
         }
     </script>
 </body>
