--- a/index.html
+++ b/index.html
@@ -326,6 +326,11 @@
             "addressRegion": "Veracruz",
             "streetAddress": "Maria Enriqueta Camarillo #6"
           },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.6",
+            "reviewCount": "250"
+          },
           "description": "Encuéntranos en Ma. Enriqueta Camarillo #6. 9:00am - 2:00pm y de 4:00pm - 7:00pm. Tan solo 2 cuadras atrás de la Nissan.",
           "name": "Verificación Cuevas",
           "telephone": "228-815-6209",
