Added image to schema

--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
             "addressRegion": "Veracruz",
             "streetAddress": "Maria Enriqueta Camarillo #6"
           },
+          "image": "https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/hero.png",
           "aggregateRating": {
             "@type": "AggregateRating",
             "ratingValue": "4.6",
