--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -8,13 +8,13 @@
     <meta property="og:url" content="https://verificacioncuevas.com/5-tips-para-verificar.html">
     <meta property="og:type" content="article">
     <meta property="og:title" content="¡Que no te multen! Te decimos cómo pasar la verificación.">
-    <meta property="og:description" content="Te damos 5 tips para que puedas pasar la verificación vehicular sin mayor problema.">
+    <meta property="og:description" content="5 tips para que puedas pasar la verificación vehicular sin problemas.">
     <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/car-engine.jpg">
     <!-- / Facebook Meta -->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Verificación Cuevas</title>
+    <title>🚙 Verificación Cuevas</title>
 </head>
 <body>
     <header class="c-header">
