chaged input for button in form

--- a/cita.html
+++ b/cita.html
@@ -89,7 +89,7 @@
                 <label class="c-form__label">Fecha y hora que te gustaría tu cita*:</label>
                 <input class="c-form__input" type="text" name="fecha" id="" required>
                 <div class="c-form__button-container">
-                    <input class="c-form__button" type="submit" value="Enviar">
+                    <button class="c-form__button" type="submit" value="Enviar">Enviar</button>
                 </div>
             </form>
         </div>
