--- a/cita.html
+++ b/cita.html
@@ -64,7 +64,7 @@
                 <h3 class="c-form__title" >Agenda tu cita</h3>
                 <p class="c-form__description" ><strong>¡No hagas filas!</strong> En menos de 1 minuto puedes agendar tu cita para verificar. Es fácil y rápido; solo necesitamos un par de datos tuyos y nosotros nos pondremos en contacto contigo para confirmar tu cita lo más pronto posible.</p>
                 <label class="c-form__label" for="">Nombre*:</label>
-                <input class="c-form__input" type="text" name="nombre" id="" required>
+                <input class="c-form__input" type="text" name="nombre" id="">
                 <div class="c-form__input-divider">
                     <div class="c-form__input-division">
                         <label class="c-form__label" for="">Marca y Modelo del vehículo:</label>
@@ -73,21 +73,21 @@
                     </div>
                     <div class="c-form__input-division">
                         <label class="c-form__label">Terminación de placa:</label>
-                        <input class="c-form__input" type="number" name="placa" id="" required>
+                        <input class="c-form__input" type="number" name="placa" id="">
                     </div>
                 </div>
                 <div class="c-form__input-divider">
                     <div class="c-form__input-division">
                         <label class="c-form__label">Correo electrónico:</label>
-                        <input class="c-form__input" type="email" name="correo" id="" required>
+                        <input class="c-form__input" type="email" name="correo" id="">
                     </div>
                     <div class="c-form__input-division">
                         <label class="c-form__label">Número de telefono/celular*:</label>
-                        <input class="c-form__input" type="tel" name="telefono" id="" required>
+                        <input class="c-form__input" type="tel" name="telefono" id="">
                     </div>
                 </div>
                 <label class="c-form__label">Fecha y hora que te gustaría tu cita*:</label>
-                <input class="c-form__input" type="text" name="fecha" id="" required>
+                <input class="c-form__input" type="text" name="fecha" id="">
                 <div class="c-form__button-container">
                     <button class="c-form__button" type="submit" value="Enviar">Enviar</button>
                 </div>
