Added id attribute to form button

--- a/cita.html
+++ b/cita.html
@@ -89,7 +89,7 @@
                 <label class="c-form__label">Fecha y hora que te gustaría tu cita*:</label>
                 <input class="c-form__input" type="text" name="fecha" id="">
                 <div class="c-form__button-container">
-                    <button class="c-form__button" type="submit" value="Enviar">Enviar</button>
+                    <button class="c-form__button" type="submit" value="Enviar" id="button">Enviar</button>
                 </div>
             </form>
         </div>
