Added month banner and fixed urls in header

--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -44,7 +44,7 @@
                     <li class="c-header__item"><a href="/index.html#calendario" class="c-header__link">Calendario</a></li>
                     <li class="c-header__item"><a href="/index.html#tortuga" class="c-header__link">Medio Ambiente</a></li>
                     <li class="c-header__item"><a href="/index.html#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
-                    <li class="c-header__item"><a href="/index.html#verifica" class="c-cta c-cta--mini">Verifica</a></li>
+                    <li class="c-header__item"><a href="/cita.html" class="c-cta c-cta--mini">Verifica</a></li>
                 </ul>
             </nav>
             <nav class="c-header__mobile-navbar">
