--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li class="c-header__item"><a href="#calendario" class="c-header__link">Calendario</a></li>
                     <li class="c-header__item"><a href="#tortuga" class="c-header__link">Medio Ambiente</a></li>
                     <li class="c-header__item"><a href="#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
-                    <li class="c-header__item"><a href="#verifica" class="c-cta c-cta--mini">Verifica</a></li>
+                    <li class="c-header__item"><a href="/cita.html" class="c-cta c-cta--mini">Verifica</a></li>
                 </ul>
             </nav>
             <nav class="c-header__mobile-navbar">
