improved cita meta tags

--- a/cita.html
+++ b/cita.html
@@ -7,9 +7,9 @@
     <!-- Facebook Meta -->
     <meta property="og:url" content="https://verificacioncuevas.com/index.html">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="¡Cuida tu patrimonio verificando!">
-    <meta property="og:description" content="Encuéntranos en Ma. Enriqueta Camarillo #6. 9:00am - 2:00pm y de 4:00pm - 6:30pm. Tan solo 2 cuadras atrás de la Nissan.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/hero.png">
+    <meta property="og:title" content="⭐️ ¡Agenda tu cita en 5 minutos! ⭐️">
+    <meta property="og:description" content="Sabemos lo valioso que es tu tiempo, no hagas filas agendando tu cita en línea.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/nov-dic.png">
     <!-- / Facebook Meta -->
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
