Minor change to cita meta

--- a/cita.html
+++ b/cita.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Facebook Meta -->
-    <meta property="og:url" content="https://verificacioncuevas.com/index.html">
+    <meta property="og:url" content="https://verificacioncuevas.com/cita.html">
     <meta property="og:type" content="website">
     <meta property="og:title" content="⭐️ ¡Agenda tu cita en 5 minutos! ⭐️">
     <meta property="og:description" content="Sabemos lo valioso que es tu tiempo, no hagas filas agendando tu cita en línea.">
