minor cita meta changes

--- a/cita.html
+++ b/cita.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Facebook Meta -->
     <meta property="og:url" content="https://verificacioncuevas.com/cita.html">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="⭐️ ¡Agenda tu cita en 5 minutos! ⭐️">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="⭐️¡Agenda tu cita en 5 minutos!⭐️">
     <meta property="og:description" content="Sabemos lo valioso que es tu tiempo, no hagas filas agendando tu cita en línea.">
     <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/nov-dic.png">
     <!-- / Facebook Meta -->
