--- a/cita.html
+++ b/cita.html
@@ -7,7 +7,7 @@
     <!-- Facebook Meta -->
     <meta property="og:url" content="https://verificacioncuevas.com/cita.html">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="⭐️¡Agenda tu cita en 5 minutos!⭐️">
+    <meta property="og:title" content="¡Agenda tu cita en 5 minutos!⏳">
     <meta property="og:description" content="Sabemos lo valioso que es tu tiempo, no hagas filas agendando tu cita en línea.">
     <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/nov-dic.png">
     <!-- / Facebook Meta -->
