--- a/cita.html
+++ b/cita.html
@@ -39,12 +39,13 @@
             </a>
             <nav class="c-header__navbar" id="menu">
                 <ul class="c-header__list">
-                    <li class="c-header__item"><a href="/index.html#que-es" class="c-header__link">¿Qué es?</a></li>
                     <li class="c-header__item"><a href="/index.html#beneficios" class="c-header__link">Beneficios</a></li>
                     <li class="c-header__item"><a href="/index.html#calendario" class="c-header__link">Calendario</a></li>
+                    <li class="c-header__item"><a href="/index.html#contacto" class="c-header__link">Dónde verificar</a></li>
+                    <li class="c-header__item"><a href="/index.html#que-es" class="c-header__link">¿Qué es?</a></li>
                     <li class="c-header__item"><a href="/index.html#tortuga" class="c-header__link">Medio Ambiente</a></li>
                     <li class="c-header__item"><a href="/index.html#preguntas" class="c-header__link">Preguntas frecuentes</a></li>
-                    <li class="c-header__item"><a href="/cita.html" class="c-cta c-cta--mini">Verifica</a></li>
+                    <li class="c-header__item"><a href="/cita.html" class="c-cta c-cta--mini">Agendar</a></li>
                 </ul>
             </nav>
             <nav class="c-header__mobile-navbar">
