updated title and description meta tags

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>🚙 Verificación Cuevas</title>
+    <title>Verificación Vehicular en Xalapa | Verificación Cuevas 🚙</title>
+    <meta name="description" content="Encuéntranos en Ma. Enriqueta Camarillo #6 | 9:00am - 2:00pm y de 4:00pm - 6:30pm. Tan solo 2 cuadras atrás de la Nissan. No hagas filas ¡Agenda tu cita YA!" >
     <!-- Facebook Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
@@ -58,8 +59,8 @@
     </header>
     <section class="c-hero">
         <div class="u-wrapper">
-            <h1 class="c-hero__title">Centro de Verificación C-XL-02</h1>
-            <h2 class="c-hero__subtitle">A tu servicio desde 1991</h2>
+            <h1 class="c-hero__title">Verificación Cuevas</h1>
+            <h2 class="c-hero__subtitle">Centro de Verificación Vehicular Autorizado en Xalapa C-XL-02</h2>
             <a class="c-cta c-cta--big" href="#verifica">Agenda una cita</a>
         </div>
     </section>
