--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Encuéntranos en Ma. Enriqueta Camarillo #6. 9:00am - 2:00pm y de 4:00pm - 6:30pm. Tan solo 2 cuadras atrás de la Nissan.">
     <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/hero.png">
     <!-- / Facebook Meta -->
+    <link rel="canonical" href="https://verificacioncuevas.com">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
