--- a/cita.html
+++ b/cita.html
@@ -11,10 +11,12 @@
     <meta property="og:description" content="Sabemos lo valioso que es tu tiempo, no hagas filas agendando tu cita en línea.">
     <meta property="og:image" content="https://raw.githubusercontent.com/dobletaptap/verificacion-cuevas/master/img/nov-dic.png">
     <!-- / Facebook Meta -->
+    <link rel="canonical" href="https://verificacioncuevas.com/cita">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>🚙 Verificación Cuevas</title>
+    <title>Verificación Vehicular en Xalapa | Verificación Cuevas 🚙</title>
+    <meta name="description" content="Encuéntranos en Ma. Enriqueta Camarillo #6 | 9:00am - 2:00pm y de 4:00pm - 6:30pm. Tan solo 2 cuadras atrás de la Nissan. No hagas filas ¡Agenda tu cita YA!" >
     <!-- Facebook Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
