--- a/cita.html
+++ b/cita.html
@@ -52,7 +52,7 @@
             </nav>
             <nav class="c-header__mobile-navbar">
                 <ul class="c-header__mobile-list">
-                    <li class="c-header__mobile-item"><a href="#verifica" class="c-cta c-cta--mini">Verifica</a></li>
+                    <li class="c-header__mobile-item"><a href="/cita.html" class="c-cta c-cta--mini">Agendar</a></li>
                     <li class="c-header__mobile-item"><a id="menu-button" class="c-header__link c-header__link--menu">Menú</a></li>
                 </ul>
             </nav>
