Continued fixing hero image

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
             </nav>
         </div>
     </header>
-    <section class="c-hero">
+    <div class="c-hero">
         <div class="u-wrapper">
             <h1 class="c-hero__title">Verificación Cuevas</h1>
             <h2 class="c-hero__subtitle">Centro de Verificación Vehicular Autorizado en Xalapa C-XL-02</h2>
             <a class="c-cta c-cta--big" href="#verifica">Agenda una cita</a>
         </div>
-    </section>
+    </div>
     <section id="beneficios">
         <div class="u-wrapper">
             <h2 class="c-heading">¿Por qué verificar?</h2>
