--- a/5-tips-para-verificar.html
+++ b/5-tips-para-verificar.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>🚙 Verificación Cuevas</title>
+    <title>5 tips para pasar la verificación | Verificación Cuevas</title>
     <!-- Facebook Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
