--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Verificación Vehicular en Xalapa | Verificación Cuevas 🚙</title>
+    <title>Verificación Vehícular en Xalapa | Verificación Cuevas🚙</title>
     <meta name="description" content="Encuéntranos en Ma. Enriqueta Camarillo #6 | 9:00am - 2:00pm y de 4:00pm - 6:30pm. Tan solo 2 cuadras atrás de la Nissan. No hagas filas ¡Agenda tu cita YA!" >
     <!-- Facebook Pixel Code -->
     <script>
